2011-08-27  James Wilkinson  <james@slor.net>
* config.guess: Detect Haiku as x86 BeOS.


2012-08-05  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* sysrom.c: Fixed CRC32 of the CC01r4 OS ROM - the previous one was for a
  binary that I've myself incorrectly-assembled from sources.


2012-07-29  Kostas Nakos  <knakos@gmail.com>
* android/*: Update project to newer android sdk (jelly bean - 4.1),
             Fine tuning of the B: device handling,
             Fix audio stuttering on jelly bean,
             Fix keymap preference crash on jelly bean,
			 Fix keyboard mapping dialog on jelly bean


2012-07-21  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* DOC/CREDITS: Fix alphabetical order. Update my own contributions.


2012-06-02  Kostas Nakos  <knakos@gmail.com>
* android/*: Small tweaks to the touchscreen mode
* afile.c, cartridge.c: Temporary fix for non auto-detected cartridges, until
  the implementation of a proper menu


2012-05-20  Kostas Nakos  <knakos@gmail.com>
* android/*: Implement Planetary Defense mode, a Koala Pad click-where-I-point
  mode
* devices.[ch], esc.h, android/*: Implement the B: device in the core and
  android port


2012-05-19  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* cartridge.[ch], ui.c, atari800.man, DOC/cart.txt, DOC/USAGE: Support for
  2 KB and 4 KB ROMs used in early Atari cartridges.

* configure.ac, platform.h, atari.c, ui_basic.c, ui.[ch], sdl/init.[ch],
  sdl/main.c, sdl/sound.c, debian/rules, util/benchmark.pl, DOC/INSTALL: Merge
  basic and sdl targets - GUI and sound libraries are now autodetected or
  explicitely selected by --with-gui and --with-sound configure options.

* configure_dos.bat: Fix the dosvga and basic targets being merged.


2012-05-16  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* cartridge.[ch], ui.c, atari800.man, DOC/cart.txt, DOC/CREDITS, DOC/USAGE:
  Committing patch by Jakub Husak: Support for the SIC! cartridge mapping
  (without the flash programming feature).

