@@ -1,0 +1,5 @@
+<resources>
+    <style name="MainTheme" parent="@android:style/Theme.Holo">
+		<item name="android:windowActionBarOverlay">true</item>
+    </style>
+</resources>
